TESS now STePP added to website, nav update
Former-commit-id: b808ab9cbaca72f03fb1373c860d39a4b94ecc79 [formerly 8f5c9abb44a0bd45fc95e29262bd59097cb9e8d1]
Former-commit-id: cc65f5e0a1353688463c2919450fff6c2a7f1c8f

--- a/_includes/machines/machinesPowerSolarThermal.html
+++ b/_includes/machines/machinesPowerSolarThermal.html
@@ -1,43 +1,28 @@
-				<h3>Solar Thermal Turbines</h3>
+				<h3 id="TESS">Solar Thermal Power Plants - STePP units</h3>
 				<p>
 					The main power source once Lalande has a genuine town,
 					and later for the city, isn't nuclear or solar panels.
-					It's turbines running on stored solar heat. Specifically,
-					closed Brayton cycle turbines using a gaseos working fluid,
+					It's generators running on stored solar heat. Specifically,
+					Stirling engines using a gaseous working fluid,
  					heated by a mass of molten
 					regolith, which in turn is heated by tubes filled with
-					molten salts that circulate through a trough of
-					parabolic mirrors. These are being called the Thermal
-					Energy Storage Systems - the TESS.
+					molten sodium that circulate through
+					parabolic mirrors.
 				</p>
 				<p>
-					The reservoirs of molten regolith these systems produce
-					are useful. Important volatiles such as
-					oxides of potassium, phosphate, and sodium boil off
-					them and are collected. If operated
-					at a high enough temperature, vapors of pure oxygen
-					could also be collected. The systems are sized to have extra
-					capacity so that some of the lava produced can be drawn
-					off for use elsewhere - such as to supply the dust roasters,
-					or as pre-processed feedstock for reactors making glass. The
-					heat reservoir would thus need to be resupplied with fresh
-					regolith as its contents are drawn off or boil off. Any
-					regolith will do, so it can function as a giant cauldron
-					contantly stewing a regolith soup. By adjusting the
-					minerology of the ingredients and how long the contents are
-					left to boil, the chemistry of the lava can be tuned to best
-					serve the needs of the furnaces and reactors
-					that later use it.
+					In an earlier version, the chemicals that boil off the lava were going to be collected for use elsewhere, and the plant was sized with extra capacity so that some lava could be drawn off and used to produce things like glass and construction materials. But the plant is much more efficient and easier to build if it runs at temperatures too low for that to be viable, so now a separate solar furnace will be designed for bulk molten regolith production.
 				</p>
 				<p>
-					Some of the components for TESS units are simple and can
+					Some of the components for STePP units are simple and can
 					be produced on-site early in colony development - mirrors,
-					turbine housings, radiator units. A while later the pipes,
-					turbine blades, and generators can also be made there.
-					Production of efficient working units made entirely locally
+					the tanks, pipes. With 3d printing of parts out of sintered metal powder
+					and casting of molten minerals, most of the radiators, pumps, and generators can also be made. Production of efficient working units made entirely locally
 					seems feasible sooner than the same goal for solar panels or
 					nuclear plants, especially if early units work
 					at lower temperatures.
+				</p>
+				<p>
+					We have been working on a <a href="https://docs.google.com/spreadsheets/d/1DDefCpumWyTrvg8uSErBu8aJNAgiLPnV-yYAWZB_vGc/edit?usp=sharing">spreadsheet</a> that roughly calculates how well this thing would run and the power it would produce. Very roughly, and it is being added to bit by bit. It does help in thinking it through and has been a good learning tool. It will be nice to have spreadsheets, scripts, and simulations for all of these models down the road.
 				</p>
 			</div>
 		</div>
@@ -56,25 +41,22 @@
 		<figure class="sideDiv">
 			<img src="img/BraytonTurbineForSpace.png">
 			<figcaption><a href="https://ntrs.nasa.gov/search.jsp?R=20100026654&hterms=brayton+generator&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dbrayton%2Bgenerator">
-				Closed Brayton Cycle Power Conversion Unit</a> by Robert L Fuller, a paper for
+				Closed Brayton Cycle Power Conversion Unit for Fission Surface Power</a> by Robert L Fuller, a paper for
 				the Glenn Research Center under contract to NASA, 2010. This was based on the
-				heat source being a small nuclear reactor, so a number of parameters are
-				different than contemplated for the colony, but the basic system would be
-				similar. This paper will be used to make a much improved model of the
-				turbine structures.
+				heat source being a small nuclear reactor, for the early days of Cernan's Promise, it would need to be much bigger. This paper has good illustrations for the connected turbine, as shown above. Possibly a Stirling engine version would be preferable later, as that is the generator favored for the subsequent solar thermal system.
 			</figcaption>
 		</figure>
 	</aside>
 </div>
 <section class="frameContainer">
- <div class="framePairTop" id="TESS">
+ <div class="framePairTop" id="STePP">
 		<div class="framewrap frame16x9">
-						<iframe src="TESS.html" frameborder="0" allowfullscreen
+						<iframe src="STePP.html" frameborder="0" allowfullscreen
 						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
  </div>
  <div class="framePairBottom">
-	 This model shows an older radiator design, otherwise it's similar to the	more recent model shown in the Phase 1 Overview model.
+	 This shows a single mirror unit, tank complex, Stirling engine, and radiator unit, for the sake of a clear explanation. Units placed in the colonies will have as many mirror, generator, and radiator units as the tank can support, and be scaled as large as simulations indicate would work well enough. That simulating remains to be done, but guesstimating from what we have now, this concept is a good option for units producing up to 10 MW of electricity, steadily day and night.
  </div>
 </section>
