--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,10 +36,18 @@
 									<li><a href="lalande.html#CraterModel">Crater Model</a></li>
 								</ul>
 							</li>
-							<li><a href="colonies.html#3dLalande">Structures</a></li>
 						</ul>
+							<li><a href="colonies.html#3dLalande">Structures</a>
+								<ul>
+									<li><a href="colonies.html#Phase1_Overview">Cernan's Promise</a></li>
+									<li><a href="colonies.html#AtriumCutaway">Atrium Hab</a></li>
+									<li><a href="colonies.html#AtriumRadBlind">Radiation Blind Roofs</a></li>
+									<li><a href="colonies.html#GalleryCutaway">Gallery Hab</a></li>
+									<li><a href="colonies.html#DomeCity">Lalande City</a></li>
+								</ul>
+							</li>
 					</li>
-					<li><a href="colonies.html#peary">Peary</a>
+					<li><a href="colonies.html#peary">Whipple</a>
 						<ul>
 							<li><a href="colonies.html#PolarFirstHab">First Polar Hab</a></li>
 						</ul>
