--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -36,19 +36,19 @@ header
   border-top: 1px solid $aHoverBk
   border-bottom: 1px solid $aHoverBk
   width: 100%
-  p
+  h1
     box-sizing: border-box
     width: 70%
     margin: 2rem auto
     color: $headingColor
-    font-weight: 300
-    font-size: 1.1rem
-    line-height: 1.5rem
+    font-weight: 400
+    font-size: 1.5rem
+    line-height: 1.3rem
     letter-spacing: 2px
     background-color: rgba(0, 0, 0, 0.9)
     border-radius: 2rem
     border: 1px solid $aHoverBk
-    padding: 1rem 2rem
+    padding: 2rem 2rem
 
 .container
   margin-top: 30px
