--- a/_includes/learn/lunarElevator.html
+++ b/_includes/learn/lunarElevator.html
@@ -21,3 +21,4 @@
 		<p id="resultLE">&nbsp;</p>
 		<p id="resultLE2">&nbsp;</p>
 		<p id="resultLE3">&nbsp;</p>
+		<p>See also the <a href="tools/teth.html">Tether Tool</a></p>
