--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -93,6 +93,7 @@
 						<ul>
 							<li><a href="learn.html#SuborbitalHop">Suborbital Hop</a></li>
 							<li><a href="learn.html#LunarElevator">Lunar Elevator</a></li>
+							<li><a href="learn.html#MiscTools">Misc Tools</a></li>
 						</ul>
 					</li>
 					<li><a href="learn.html#lessons">Orbital Mechanics</a>
