--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -11,6 +11,7 @@
 		<link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="../favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/svg+xml" href="../img/animatedIcon.svg"><!--svg icon in Firefox, ignored in other browsers-->
+		<script src="../js/planets.js"></script>
 		<style>
 body{
 	font-family:Arial,Helvetica,sans-serif;
