--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+		<script type="text/javascript" src="js/details-shim.min.js"></script>
 		<script>
 $(document).ready(function() {
 	 $('.tooltip').tooltipster({
