--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -3,9 +3,10 @@
 		<div id="RSS-feed">
 		{% include sigfeed.html %}
 		</div>
-		<a href="https://www.moonwards.com/feed/rss.xml">
+		<a href="https://www.moonwards.com/feed/rss.xml" class="plzNoHoverBackground">
 			<svg xmlns="http://www.w3.org/2000/svg" id="RSSicon"
-				viewbox="0 0 8 8" width="32" height="32" title="RSS feed">
+				viewbox="0 0 8 8" width="32" height="32">
+				<title>RSS feed</title>
 				<g stroke="none" fill="yellow">
 					<circle cx="2" cy="6" r="1" />
 					<path d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
