modernizing tether scripts and change mathjax cdn
Former-commit-id: 96dc93fefeea5b9e6691539556b2096d1893590d

--- a/_includes/learn/lunarElevator.html
+++ b/_includes/learn/lunarElevator.html
@@ -21,4 +21,4 @@
 		<p id="resultLE">&nbsp;</p>
 		<p id="resultLE2">&nbsp;</p>
 		<p id="resultLE3">&nbsp;</p>
-		<p>See also the <a href="tools/teth.html">Tether Tool</a></p>
+		<p>See also the <a href="tools/teth.html">Tether Tool</a> for unanchored elevators</p>
