--- a/_layouts/learnpage.html
+++ b/_layouts/learnpage.html
@@ -15,8 +15,9 @@ MathJax.Hub.Config({
 	}
 });
 		</script>
-		<script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+		<script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 		<script src="js/space.js"></script>
+		<script src="js/planets.js"></script>
 	</head>
 <body>
 {%include obsolete-warning.html %}
