misc html errors
Former-commit-id: 0d7e0f66a127a7e3cb615b6c87e22950b53b6e24

--- a/_includes/learn/suborbital.html
+++ b/_includes/learn/suborbital.html
@@ -4,6 +4,7 @@
 	src="img/mapmini.jpg"
 	style="display:none"
 	width="512" height="256"
+	alt="Moon map"
 	id="moonMap">
 <canvas
 	id="subOrbitalCanvas"
