--- a/_includes/machines/mining/Refining.html
+++ b/_includes/machines/mining/Refining.html
@@ -59,13 +59,14 @@ The model notes go through each stage of processing. Production was estimated in
 </div>
 </section>
 <section class="frameContainer" id="IlmeniteReactor">
- <div class="framePairTop">
+	<div class="framePairTop">
 		<div class="framewrap frame16x9">
-						<iframe src="IlmeniteReactor.html" frameborder="0" allowfullscreen
+			<iframe src="IlmeniteReactor.html" frameborder="0" allowfullscreen
 						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-						</iframe>
-	 </div>
- </div>
- <div class="framePairBottom">
-   This reactor uses the heat of the sunlight concentrated in the mirrors to melt the regolith loaded into the silo. Then hydrogen is bubbled through the mix. The reaction of hydrogen with the molten mix produces water and free metals. This model looks at processing ilmenite this way, but the process can be applied to many other mixtures. The hotter the contents can be made, the more can be done here. Pre-processing elsewhere can also make this unit more versatile. For instance, if fayalite can be sufficiently purified out of olivine, this reactor could be used to produce silica. The silica is then used to make glass, or panels of quartz. Even if the product is discolored by impurities, a bulk process like that would be invaluable.
-</div>
+			</iframe>
+		</div>
+	</div>
+	<div class="framePairBottom">
+This reactor uses the heat of the sunlight concentrated in the mirrors to melt the regolith loaded into the silo. Then hydrogen is bubbled through the mix. The reaction of hydrogen with the molten mix produces water and free metals. This model looks at processing ilmenite this way, but the process can be applied to many other mixtures. The hotter the contents can be made, the more can be done here. Pre-processing elsewhere can also make this unit more versatile. For instance, if fayalite can be sufficiently purified out of olivine, this reactor could be used to produce silica. The silica is then used to make glass, or panels of quartz. Even if the product is discolored by impurities, a bulk process like that would be invaluable.
+	</div>
+</section>
