--- a/_includes/transport/tethers/EarthTether.html
+++ b/_includes/transport/tethers/EarthTether.html
@@ -1,4 +1,4 @@
-<section id="EarthTether">
+<section>
     <div class="outerDiv">
         <div class="innerDiv">
             <h3>A Vertical skyhook for Earth</h3>
