--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -8,7 +8,7 @@ layout: default
 		</div>
 		<div class="intro">
 				<h1>{{page.headline}}</h1>
-				<p>{{page.intro | markdownify }}</p>
+				{{page.intro | markdownify }}
 		</div>
 	</header>
 {{content}}
