add more media queries for iframe height in blog section of index.html
Former-commit-id: 2916798addceb658f5b436ec2d75b8d8f0d78310 [formerly 392b7410b0137d221e0bebcfb900723e13136520]
Former-commit-id: df20280e557661e15cd33c2217f6ac919c0e91d3

--- a/sass/_iframes.sass
+++ b/sass/_iframes.sass
@@ -48,7 +48,14 @@
   padding-bottom: 75%
 
 .goodHeight
-
+  @media only screen and (min-height: 400px)
+    height: 280px
+  @media only screen and (min-height: 450px)
+    height: 330px
+  @media only screen and (min-height: 500px)
+    height: 380px
+  @media only screen and (min-height: 550px)
+    height: 430px  
   @media only screen and (min-height: 600px)
     height: 500px
   @media only screen and (min-height: 700px)
