add link back to Moonwards to Pellet Simulator
Former-commit-id: 77746dd68256d4cb4b6ee32df6f3fcbc376ee3a8 [formerly 124493d2fa89700f471694563f76cf274fd7e615]
Former-commit-id: b0da402d2ef0ddb6ab6607eadcfa9603df27e17d

--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -68,6 +68,9 @@ canvas{
 	-webkit-border-radius:4px;
 	border-radius:4px;
 }
+a, a:hover, a:visited {
+	color:inherit;
+}
 	</style>
 		{{content}}
 	</body>
