add pellet to nav, link on pellet now goes back to learn
Former-commit-id: 905984c4520b8ecbdf211e4c6c06d8cd30c2a336

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -90,6 +90,7 @@
 				<ul>
 					<li><a href="learn.html#tryit">Try It</a>
 						<ul>
+							<li><a href="learn.html#PelletSim">Pellt Simulator</a></li>
 							<li><a href="learn.html#SuborbitalHop">Suborbital Hop</a></li>
 							<li><a href="learn.html#LunarElevator">Lunar Elevator</a></li>
 							<li><a href="learn.html#MiscTools">Misc Tools</a></li>
