--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -72,6 +72,9 @@ a, a:hover, a:visited {
 	color:inherit;
 }
 	</style>
+		<div class="wrapper" id="main">
+			<h5 style="text-align: right; line-height: 0.5em;"><a href="https://www.moonwards.com/learn.html">Back to Learn</a></h5>
 		{{content}}
+		</div>
 	</body>
 </html>
