--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -2,16 +2,8 @@
 <html lang="en-US">
 	<head>
 		<title>{{page.title}}</title>
-		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
-		<meta charset="utf-8">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="{{page.description}}">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/png" href="../favicon-16x16.png" sizes="16x16">
-		<link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="../favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/svg+xml" href="../img/animatedIcon.svg"><!--svg icon in Firefox, ignored in other browsers-->
-		<script src="../js/planets.js"></script>
+		{%include commonHeadElements.html%}
+		<script src="js/planets.js"></script>
 		<style>
 body{
 	font-family:Arial,Helvetica,sans-serif;
@@ -73,7 +65,7 @@ a, a:hover, a:visited {
 }
 	</style>
 		<div class="wrapper" id="main">
-			<h5 style="text-align: right; line-height: 0.5em;"><a href="https://www.moonwards.com/learn.html">Back to Learn</a></h5>
+			<h5 style="text-align: right; line-height: 0.5em;"><a href="learn.html">Back to Learn</a></h5>
 		{{content}}
 		</div>
 	</body>
