revert blog layout to iframe and media query
Former-commit-id: f17d902394fc637cd950456cc601fa1d2196ec6d

--- a/sass/blogMain.sass
+++ b/sass/blogMain.sass
@@ -24,31 +24,18 @@ html
 
 header
   background-color: #000
-  background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg")
   border-top: 1px solid $aHoverBk
   border-bottom: 1px solid $aHoverBk
   width: 100%
   p
     box-sizing: border-box
-    width: 90%
     margin-left: 1rem
-    margin-bottom: 0
+    padding-bottom: 0.2rem
     color: $headingColor
     font-weight: 300
     font-size: 1.1rem
     line-height: 1.4rem
     letter-spacing: 2px
-    background-color: rgba(0, 0, 0, 0.9)
-    border-radius: 1rem
-    padding: 0.5rem 2rem
-  p:first-child
-    border-radius: 2rem
-    border: 1px solid $aHoverBk
-    padding: 1rem 2rem
-    line-height: 1.5rem
-    width: 70%
-    margin: 2rem auto
-
 
 body
   background-color: #000
@@ -92,6 +79,7 @@ h1
   color: $headingColor
   font-weight: 300
   font-size: 20px
+  font-style: italic
   line-height: 24px
   padding: 15px 20px 12px 45px
   margin: 0
@@ -110,7 +98,6 @@ h2
 h3
   color: $headingColor
   font-weight: 300
-  font-style: italic
   font-size: 18px
   line-height: 20px
   margin: auto
