tether tool, diagram
Former-commit-id: a7cb56b94852c3ff4dcc3092e293d47ec20215cd [formerly ca3fe1da703d3aff98c6896da296a2fe027dee6b]
Former-commit-id: c63f59998080cdaf6c01ec5bd6d7c5e28497966c

--- a/_includes/commonHeadElements.html
+++ b/_includes/commonHeadElements.html
@@ -7,3 +7,4 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/svg+xml" href="img/animatedIcon.svg"><!--animated svg icon in Firefox, ignored in other browsers-->
+		<script src="smil.user.js"></script>
