blog post corrections, timeline initial changes
Former-commit-id: b985c740ea1c1739f568107edd9fdf57bcec16db

--- a/_includes/timeline/shipsRobotsISA2.html
+++ b/_includes/timeline/shipsRobotsISA2.html
@@ -1,7 +1,7 @@
 <div class="columnSet" id="shipsRobotsISA">
  <article class="column" id="FirstTransportShips">
-   <h5>Expansion of the International Space Station</h5>
-   <p>We shall assume the ISS becomes a public-private entity under some arrangement and continues to fly. To handle the LEO end of missions from here out to RP round 5, it needs a lot of upgrading.</p>
+   <h5>Constructin of the Equatorial Space Station</h5>
+   <p>Because of the scale and nature of the work that happens on this station, it is built in an equatorial orbit. These orbits never pass through the South Atlantic Anomaly, and so the radiation exposure of people on the station is a fraction of the exposure experienced today by crews on the ISS. This architecture has been extensively explored by <a href="http://alglobus.net/">Al Globus</a>, and the aspects</p>
    <ul>
      <li>An area for on-orbit assembly of the ships listed above. That needs trusses for mooring components, robotic arms for assembly, and a bigger reaction-wheel system to keep the station oriented properly.</li>
      <li>A berthing area for the pod ship, and tanks and infrastructure to refuel it. (Later those tanks can be for the water the pod ship brings from the Moon.)</li>
