changes so blog posts open in new pages
Former-commit-id: ea541cdce309e685fa882e33e1f4d2694d332278 [formerly e43b832217a0249c037c3537b4d157da7c2fb302]
Former-commit-id: 5b0878b93084667727546beba3cb3455d6ee1870

--- a/sass/_blogMain.sass
+++ b/sass/_blogMain.sass
@@ -22,7 +22,7 @@ html
   color: rgb(247,247,220)
   font: 1rem/1.5rem 'Titillium Web', sans-serif
 
-header
+header.blog
   background-color: #000
   border-top: 1px solid $aHoverBk
   border-bottom: 1px solid $aHoverBk
@@ -37,14 +37,14 @@ header
     line-height: 1.4rem
     letter-spacing: 2px
 
-body
+body.blog
   background-color: #000
 
-.container
+.blogcontainer
   margin-left: 3%
   background-color: rgba(0, 0, 0, 0.8)
 
-figure
+figure.blog
   display: block
   width: 80%
   border: 1px solid $darkAccent
@@ -59,23 +59,15 @@ figure
     width: 90%
     background: $outerBkgd
 
-a
-  text-decoration: none
-  color: $linx
-  &:visited
-    color: $aVisited
-  &:hover
-    background-color: $aHoverBk
-  &:active
-    background-color: $aHoverBk
 
-ul
+
+ul.blog
   list-style-type: none
   margin: 0
   padding: 7px 15px
 
 
-h1
+h1.blog
   color: $headingColor
   font-weight: 300
   font-size: 20px
@@ -85,7 +77,7 @@ h1
   margin: 0
   border-bottom: 1px solid $headingColor
 
-h2
+h2.blog
   color: $headingColor
   font-weight: 300
   font-style: italic
@@ -95,7 +87,7 @@ h2
   padding: 15px 0 15px 30px
   margin: 0
 
-h3
+h3.blog
   color: $headingColor
   font-weight: 300
   font-size: 18px
