--- a/sass/_blogMain.sass
+++ b/sass/_blogMain.sass
@@ -95,3 +95,24 @@ h3.blog
   margin: auto
   padding: 15px 0 15px 45px
   margin: 0
+
+.goodHeight
+  overflow-y:auto
+  @media only screen and (min-height: 400px)
+    height: 280px
+  @media only screen and (min-height: 450px)
+    height: 330px
+  @media only screen and (min-height: 500px)
+    height: 380px
+  @media only screen and (min-height: 550px)
+    height: 430px
+  @media only screen and (min-height: 600px)
+    height: 500px
+  @media only screen and (min-height: 700px)
+    height: 600px
+  @media only screen and (min-height: 800px)
+    height: 700px
+  @media only screen and (min-height: 900px)
+    height: 800px
+  @media only screen and (min-height: 1000px)
+    height: 900px
