--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -3,6 +3,9 @@ html
   color: rgb(247,247,220)
   font: 1rem/1.6rem 'Titillium Web', sans-serif
 
+body
+  background-color: black
+
 body, ul, figure
   margin: 0
 
