--- a/sass/_iframes.sass
+++ b/sass/_iframes.sass
@@ -46,3 +46,23 @@
 
 .frame4x3
   padding-bottom: 75%
+
+.goodHeight
+  @media only screen and (min-height: 400px)
+    height: 280px
+  @media only screen and (min-height: 450px)
+    height: 330px
+  @media only screen and (min-height: 500px)
+    height: 380px
+  @media only screen and (min-height: 550px)
+    height: 430px  
+  @media only screen and (min-height: 600px)
+    height: 500px
+  @media only screen and (min-height: 700px)
+    height: 600px
+  @media only screen and (min-height: 800px)
+    height: 700px
+  @media only screen and (min-height: 900px)
+    height: 800px
+  @media only screen and (min-height: 1000px)
+    height: 900px
