--- a/_includes/commonHeadElements.html
+++ b/_includes/commonHeadElements.html
@@ -4,7 +4,7 @@
 		<meta name="description" content="{{page.description}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% if page.image %}
-		<meta content="{{ page.image }}" property="og:image">
+		<meta content="{{ site.url }}/{{ page.image }}" property="og:image">
 		{% endif %}
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
