--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -2,6 +2,7 @@ html
   margin: 0
   color: rgb(247,247,220)
   font: 1rem/1.6rem 'Titillium Web', sans-serif
+  background-color: black
 
 body, ul, figure
   margin: 0
