scope, loading and mouse events
Former-commit-id: c2e46464d99e4a4dc07684fa3c386ce543508210 [formerly b46452f47df1911be9e07144f3362e650dab153a]
Former-commit-id: a589f602206e87b92fcc3ca629218c4615af63e5

--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -64,6 +64,12 @@ canvas{
 a, a:hover, a:visited {
 	color:inherit;
 }
+.draggable{
+	cursor:move;
+}
+.tooltip{
+	cursor:help;
+}
 	</style>
 		{%include nav.html%}
 		<div class="wrapper" id="main">
