--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -70,6 +70,16 @@ a, a:hover, a:visited {
 .tooltip{
 	cursor:help;
 }
+.svgText {
+	pointer-events: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	-o-user-select:none;
+	user-select:none;
+}
 	</style>
 		{%include nav.html%}
 		<div class="wrapper" id="main">
