on-site rss embedding links
Former-commit-id: f89f5cacea60eea7d2c5b3c44c314ba994cd6e42 [formerly 1e1dc5e1ce618ed5eb8b4bf7c172b01270e20d4f]
Former-commit-id: 5a939068c0f24a913a49b060585aa8f5a642323e

--- a/_includes/sigfeed.html
+++ b/_includes/sigfeed.html
@@ -3,6 +3,6 @@
 <p id="{{rss.guid | prepend: 'item' }}" class="atom">
 	<span class="datetime">{{rss.pubDate}}</span>
 	<span class="title"><a href="{{rss.link}}">{{rss.title}}</a></span>
-	<span class="description">{{rss.content | xml_escape}}</span>
+	<span class="description">{{rss.content}}</span>
 </p>
 {% endfor %}
