--- a/_includes/timeline/timelineIntros.html
+++ b/_includes/timeline/timelineIntros.html
@@ -7,7 +7,7 @@
     Europeans colonized the world thanks to their great sailing ships. Railroads were vital to expansion across the North American continent. Almost any level of investment is justfied if it secures you access long-term to a large enough place. When that new place is the rest of the solar system? Bet the bank on it.
     The difference between reliance on chemical rockets and reliance on the system below is like the difference between wagon trains and steam locomotives. Railroads completely changed what was possible, this is the same thing.
    </p>
-   <p>The cost of transport is currently a high percentage of the total cost of space missions. Total loss of missions due to launch failure, engine failure in space, or landing failure is frequent. Long delays due to the time it takes to prepare and launch rockets slow everything down. Any serious undertaking in space needs to address these issues before it does anything else. The road to profitability can be made much shorter thanks to proper design here.
+   <p>The cost of transport is currently a high percentage of the total cost of space missions. Total loss of missions due to launch failure, engine failure in space, or landing failure is frequent. Long delays due to the time it takes to prepare and launch rockets slows everything down. Any serious undertaking in space needs to address these issues before it does anything else. The road to profitability can be made much shorter thanks to proper design here.
    </p>
   </details>
  </article>
@@ -26,6 +26,8 @@
   <details>
    <summary>A bridge to a new era</summary>
    <p>Everything here is predicated on the idea that a group of nations decide together to colonize the Moon and devote the funds necessary to do so properly without question. So, let the model be that the first missions are funded and carried out jointly by the nations with well-established space agencies - the United States, Russia, the European Union, China, India, Japan, and Canada. Once the Residence Program (explained below) begins, all nations participate.
+   </p>
+   <p>The whole timeline takes an extremely rosy view of how things progress in space. That approach allows us to envision the broadest and most ambitious range of ventures out there, which is the project's main
    </p>
   </details>
  </article>
