further timeline updates
Former-commit-id: 88d93c58e6d2ba887a0c458d8a5e18fa1fbef617

--- a/_includes/timeline/shipsRobotsISA.html
+++ b/_includes/timeline/shipsRobotsISA.html
@@ -19,29 +19,55 @@
           one gravity. </li>
         <li>The solar panels need to be quite extensive for the Station to do its construction and processing work, and to supply the labs with all the power they need. They extend from the end of the hub opposite the hexagon of trusses, together with the
         radiator panels. </li>
+        <li>The final components built, including internal elements of the Torus and the Teardrops, are made with materials from the Moon</li>
       </ul>
     </details>
     <h5><a href="machines2.html#PodShip">Pod Ships start shuttling between Earth orbit and Lunar Orbit</a></h5>
-    <p>The Pod Ships are operated remotely. They are capable of doing rendezvous and docking maneuvers on their own. Basically they are a nose with all the operating systems, a robotic arm, and a pair of solar panel wings, then a long truss with racks for the pods, and then the fuel tanks and engines on the far end. The pods are the space equivalent of shipping containers - tubes with rounded ends covered in insulation and whipple shielding, a sliding door, internal structures for holding things, and connectors if items need power or a comms connection. A Pod Ship can take 8 small ones or 4 long ones. Crew are transported in pods adapted for life support and basic accommodations.
+    <p>The Pod Ships are operated remotely. They are capable of doing rendezvous and docking maneuvers on their own. Basically they are a nose with all the operating systems, a robotic arm, and a pair of solar panel wings, then a long truss with racks for the pods, and then the fuel tanks and engines on the far end.</p>
+    <p>The pods are the space equivalent of shipping containers - tubes with rounded ends covered in insulation and whipple shielding, a sliding door, internal structures for holding things, and connectors if items need power or a comms connection. A Pod Ship can take 8 small ones or 4 long ones. Crew are transported in pods adapted for life support and basic accommodations. Some pods are  water tanks, returning mined water from the Moon to the EESS. Pod Ships are designed for a maximum payload of 80 tons to the lunar orbit when operations begin.
     </p>
+    <details>
+      <summary>Pod Ship Operations and Early Missions</summary>
     <ul>
-      <li></li>
-      <li>they use next generation hydrolox upper stages capable of many restarts</li>
-      <li>On the LEO end, it meets a space station, loads the cargo pods waiting there and gets servicing</li>
-      <li>On the MLO end, it hands off its load to the nuclear shuttle, and later to the skyhooks</li>
-      <li>When crew come, they arrive in pods outfitted for transporting people.</li>
-      <li>This ship is almost completely automatic, no pilots.</li>
+      <li>These ships have next gen hydrolox engines capable of many restarts. They get serviced between trips at the EESS.</li>
+      <li>Early missions are all to a polar orbit. Once tether construction begins, they all enter a circular orbit riding the Moon's terminus (between the night side and the day side), at an altitude of 5000 km. The first tether complex goes there so it has constant sunlight on its solar panels. </li>
+      <li>The 1st and 2nd missions deliver 2 Lunar Nuclear Craft (LNCs, pronounces 'links'), extra fuel, and initial equipment for surface operations.</li>
+      <li>There are 15 missions to deliver the equipment and components to build the first polar tether. The Pod Ship that delivers the first one stays in orbit so its solar arrays can power the construction equipment, plus it provides a comms link, orbital maintenance, and a stable construction platform. The other in operation at this point delivers goods every 2 weeks.</li>
+      <li>On the 3rd one, a crew pod is dropped off and connected to the Pod Ship staying in orbit, with a crew of 4 that stay for 4 weeks. They oversee initial deployment and testing of the skyhook construction equipment, and remotely operate equipment at the lunar pole. The 6th one delivers the superstructure of the future Crossroads Station, and the Pod Ship leaves, handing off its duties to that skeletal Station. The role of the Station after this is outlined it its section below.</li>
+      <li>After a few months of lunar surface operations, there are 2 further missions delivering equipment, fuel, and materials which the LNCs transfer to polar ops. The LNCs deliver a few tons of lunar material that the Pod Ships return to the EESS for analysis.</li>
+      <li>By the end of this phase, the Pod Ships have delivered many loads of equipment and supplies, and have rotated many crews. They return to the EESS carrying water, lunar dust that goes to soil beneficiation projects in its greenhouses, and initial in situ processed materials for testing and incorporation into internal elements of the EESS.</li>
     </ul>
-    <h5><a href="machines2.html#nuclearShuttles">Nuclear Thermal Shuttles</a></h5>
+  </details>
+    <h5><a href="machines2.html#nuclearShuttles">Lunar Nuclear Craft</a></h5>
+    <p>These craft use nuclear thermal engines with a bipropellant design, known as a <a href="https://ntrs.nasa.gov/search.jsp?R=20170004744&hterms=lantr+nuclear+thermal&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dlantr%2Bnuclear%2Bthermal">LANTR design</a>. They get thrust by superheating hydrogen, and during launch and landing, can greatly augment that thrust by injecting oxygen into the engine nozzle, basically like an afterburner. They are designed for vertical landing and takeoff.
+    </p>
+    <p>The LNCs are similar in architecture to the the Pod Ships, including being self-piloting. The difference is their engines are nuclear, which means they include heavy shielding, and they don't have solar panels, as they draw their electrical power from the nuclear reactor as well. Their racks have space for up to 4 small pods or 2 large ones. Thanks to their bipropellant capability, they are able to launch and land about 20 tons of payload even before there is a tether reducing the delta V required, though it takes a lot more fuel to do so. Once the tether is in place, they are designed to move loads up to 40 tons to and from the tether foot.
+    </p>
+    <details>
+      <summary>LNC Operations and Early Missions</summary>
+      <ul>
+        <li>Initially the LNCs help the surface rovers set up operations by providing supplemental power from their onboard reactors, acting as a comms link, and using their robotic arms</li>
+        <li>Once water production allows supplementing of their fuel supply, and the growing tether lowers delta V requirements, they shuttle loads of lunar rock to the tether foot. This is taken up to the tether anchor to increase its mass. They do this as often as possible.</li>
+        <li>With further increases in water production, they begin delivering tanks of water to the tether foot as well, as often as possible.</li>
+        <li>They do a series of sortie missions to the lunar maria and areas of interest, collecting samples for analysis and experimentation, and surveying.</li>
+        <li>Before people can be landed on the surface, a well needs to be excavated in the LNC landing pad, so that before people exit the craft, the engine section is unclamped and lowered into it, keeping them safe from its radiation. This unclamping and lowering system must be built into the craft from the beginning, and probably should be used always as soon as the well is built, though people won't arrive for a few years more.</li>
+      </ul>
+  </details>
+  <h5>Crossroads Skyhook and Anchor Station Construction</h5>
+  <p>Once the superstructure for Crossroads is delivered, it is continuously occupied by crews of 8, who stay for 4 weeks at a time. Further deliveries by the Pod Ships build up its capacity, and the rock the LNCs send up establish good shielding. Once there is enough shielding over key areas such as sleeping berths, crews begin to extend their stays. By the end of this phase a crew of 12 is always aboard, and people stay for up to a year at a time.
+  </p>
+  <p>The crew of Crossroads can operate the robots on the lunar surface, and on the skyhook, without the significant delay during transmissions which slow and complicate tele-operation from Earth. Much more complex and dynamic robotic work can be done in this situation. That is explained in the next column.
+  </p>
+  <p>By the end of this phase, the lower tether is equiped with a foot platform that can berth a fully loaded LNC, a tip platform that can berth a fully loaded Pod Ship, and climbers that can transfer the full payloads of both. This requires a total of 1000 tons of Zylon woven into a ribbon extending 5000 km downwards and another reaching 4500 km upwards, which can carry the load of the platforms, climbers, maintenance and motion control systems, berthed ships, and cargo, with a safety factor of 2.</p>
+  <details>
+    <summary>Crossroads Systems and Operations</summary>
     <ul>
-      <li>Flies between the lunar surface and lunar orbit</li>
-      <li>May be practical to connect its engines to turbine generators when not flying</li>
-      <li>Uses water for a higher-thrust fuel, which is more efficient, once the skyhook is in place, because most of the fuel is for launch and landing, when high thrust is the priority. Thus the base does not need to split water into hydrogen and oxygen,
-        or to store cryogenic hydrogen.</li>
-      <li>A barrier needs to be between the shuttle and human habs so that people aren't exposed to its radiation when working outside</li>
-      <li>To design the model, better data is needed on radiation shield design. </li>
+      <li>The climbers are nuclear</li>
+      <li>The Anchor Station runs on solar power</li>
+      <li>Orbital control is mostly achieved through passive momentum transfer, by dropping and retrieving weights.</li>
     </ul>
-    <p><b>10 to 15 missions to the Moon occur during this phase. The pod ship and nuclear shuttle both can take a maximum payload of 40 tons. The payload landed on the Moon is 300 tons or more. </b></p>
+  </details>
+    <p><b>The Pod Ships make  </b></p>
   </article>
   <article class="column" id="RobotRoverTests">
     <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
